fixed issue on ie11 not showing check on checkboxes

--- a/knowage/web-content/themes/commons/css/SASS/components/_angularTable.scss
+++ b/knowage/web-content/themes/commons/css/SASS/components/_angularTable.scss
@@ -488,5 +488,10 @@ angular-table, cockpit-angular-table{
     #angularFullTableContentBox{
 		overflow:auto;
 	}
-  }
+
+	  md-checkbox.md-checked ._md-icon {
+	  	border-collapse: separate;
+	  }
+	}
+  
 }
